# wi-jungle

./: README.md
backend/: CMakeLists.txt  server.cpp  users.txt
wi-jungle/: package-lock.json  package.json  vite.config.js
wi-jungle/electron/: main.js  preload.js
wi-jungle/public/: index.html
wi-jungle/src/: App.jsx
wi-jungle/src/Dashboard/: Calculator.css  Calculator.jsx  Dashboard.css  Dashboard.jsx
wi-jungle/src/Home/: Home.css  Home.jsx
